syntax = "proto3";

option go_package = "genprotos/vote";

package protos;

import "candidate.proto";
import "election.proto" ;

service VoteService {
    rpc CreateVote(Vote) returns (Void) {}
    rpc DeleteVote(ById) returns (Void) {}
    rpc UpdateVote(Vote) returns(Void){}
    rpc GetByIdVote(ById) returns (GetAllVote) {}
  }

  
message Vote {
    string id = 1;
    Candidate candidate =2;
    string date =3;
}

message GetAllVote{
  repeated Vote votes=1;
}